--- a/Dockerfile_python
+++ b/Dockerfile_python
@@ -4,4 +4,4 @@ COPY requirements.txt .
 RUN python -m pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-CMD ["python", "src/code/app.py"]
+CMD ["python", "src/python_code/app.py"]
